--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,6 @@
 }
 
 #tabContainer {
-    width: 100%;
     height: 5rem;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -45,6 +44,20 @@
     grid-column: 4/5;
 }
 
-.activeTab {
+.activeTabHeader {
     background-color: var(--activeTabColor);
+}
+
+#contentContainer {
+    position: relative;
+    height: 40rem;
+}
+
+#homeTabContainer,
+#menuTabContainer,
+#contactTabContainer {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
